# attention-residuals

./: .gitignore  DEPTH_UTILIZATION_RESEARCH.md  EVALUATION_RESULTS.md  README.md  pyproject.toml
attnres/: __init__.py
attnres/core/: __init__.py  block_attn_res.py  full_attn_res.py  online_softmax.py  utils.py
attnres/inference/: __init__.py  cache.py  engine.py
attnres/models/: __init__.py  gpt_demo.py  hf_wrapper.py
attnres/visualisation/: __init__.py  attention_maps.py  scaling_laws.py  training_dynamics.py
scripts/: eval_ablations.py  eval_depth_attention.py  eval_scaling.py  run_experiments.py  train_gpt_demo.py
tests/: test_core.py
